# trabajo_practico-AdD_g8

./: .gitignore  README.md  eda.ipynb  eda_wiht_arrests.ipynb  main.ipynb  pyproject.toml
