[project]
name = "trabajo-practico-add-g8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=7.1.0",
]
